# rust-crud-axum-sqlx-mysql

./: Cargo.toml  README.md
script/: insert_script  update_script
sql/: sql_rust_axum_mysql.sql
src/: main.rs
src/script/: delete_script
